# mason3

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release-please.yml  rust.yml
genome/: Cargo.toml
genome/src/: err.rs  main.rs
src/: cmd_frag_sequencing.rs  cmd_genome.rs  cmd_methylation.rs  common.rs  main.rs  methylation.rs  seq.rs
src/seq/: bs.rs  illumina.rs  roche454.rs  sanger.rs
tests/: build-data.sh
tests/frag-sequencing/: input-1.fa  output-1-sanger-read-info.fa  output-1-sanger.fa
tests/genome/: expected-ll-80.fa  expected.fa
tests/methylation/: expected.fa  input.fa
