[package]
name = "mason"
version = "0.1.0"
authors = [
    "Manuel Holtgrewe <manuel.holtgrewe@bih-charite.de>",
]
description = "A versatile software package for simulating NGS short-read data"
repository = "https://github.com/holtgrewe/mason3"
documentation = "https://mason.readthedocs.io"
readme = "README.md"
license = "MIT"
edition = "2021"
include = [
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
]

[package.metadata.release]
pre-release-commit-message = "release version {{version}}"
tag-message = "Version {{version}} of mason."

[dependencies]
anyhow = "*"
bio = "*"
clap = { version = "*", features=["derive"] }
clap-verbosity-flag = "*"
console = "*"
enum-utils = "*"
file_diff = "*"
indicatif = "*"
fastrand = "*"
statrs = "*"
tempdir = "*"
thiserror = "*"

[dev-dependencies]
pretty_assertions = "*"
